# ultrareality

./: .gitignore  Cargo.toml
docs/: n64-opcodes-reference.md
src/: ai.rs  boot.rs  bus.rs  cycles.rs  lib.rs  machine.rs  main.rs  mi.rs  pi.rs  pif.rs  rcp.rs  rdp.rs  rdp_combiner.rs  rdp_triangle.rs  ri.rs  rsp.rs  rsp_vu.rs  si.rs  timing.rs  vi.rs  video.rs
src/cpu/: cache.rs  cop0.rs  cop1.rs  mod.rs  r4300i.rs  scoreboard.rs  tlb.rs
src/present/: mod.rs  wgpu_present.rs
tools/: _repair_r4300i_once.py  verify_rust_sources.py
