[package]
name = "ultrareality"
version = "0.1.0"
edition = "2021"
description = "Cycle-oriented Nintendo 64 emulation core (R4300i + system bus)"
license = "GPL-3.0-or-later"

[dependencies]
minifb = "0.27"
wgpu = "0.20"
winit = "0.29"
pollster = "0.3"

[[bin]]
name = "ultrareality"
path = "src/main.rs"

[lib]
name = "ultrareality"
path = "src/lib.rs"
